Fix excessive zoom on Vercel deployment
- Reduce zoom to 75% (from 90%) for better scaling
- Add transform: scale fallback for browser compatibility
- Reduce container max-width to 1600px (from 2000px)
- Reduce container padding to 40px (from 60px)
- Add cache-busting version parameter to CSS links
- Should fix the overly zoomed-in appearance on production

--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Essay Grader</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/main.css?v=2">
     <style>
         .login-container {
             max-width: 800px;
