--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="/images/LMGM-favicon.png">
 
     <!-- External CSS Files -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/main.css?v=2">
     <link rel="stylesheet" href="/css/components.css?v=10">
     <link rel="stylesheet" href="/css/print.css">
 </head>
