Fix missing files and add manage profiles button debugging
- Remove reference to non-existent main.js file (causing 404)
- Add direct click listener to manage profiles button for testing
- Will help identify if button clicks are being detected

--- a/public/index.html
+++ b/public/index.html
@@ -436,7 +436,6 @@
     <!-- User Menu Script -->
     <script src="/js/user-menu.js"></script>
 
-    <!-- Modern Entry Point (loaded by Vite) -->
-    <script type="module" src="/main.js?v=14"></script>
+    <!-- Modern Entry Point removed - file doesn't exist -->
 </body>
 </html>
