--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
 
 
                 <div class="form-group">
-                    <label>Student Essays: <span style="color: #ff6b35; font-weight: bold; font-size: 0.9em;">(6 essays max - deployment fixed!)</span></label>
+                    <label>Student Essays: <span style="color: #ff6b35; font-weight: bold; font-size: 0.9em;">(6 essays max - more coming soon!)</span></label>
                     <div id="essaysContainer">
                         <div class="essay-entry" data-essay-index="0">
                             <div class="essay-header">
