Update frontend modal to show separate Correction and Explanation fields
- Replace single "Notes" field with two fields: "Correction" and "Explanation"
- Correction field is for what the text should be corrected to
- Explanation field is optional, for why the error is wrong
- Update all modal handling code to save/load both fields
- Maintain backwards compatibility with old 'notes' field
- Update tooltips to show explanation (or correction if no explanation)

Frontend now properly displays and saves the correction/explanation data from GPT.

--- a/public/index.html
+++ b/public/index.html
@@ -163,8 +163,11 @@
                     <!-- Category buttons will be dynamically populated -->
                 </div>
 
-                <label for="editNotes" style="font-size: 18px; font-weight: bold; margin-top: 24px; margin-bottom: 12px; display: block;">Notes:</label>
-                <textarea id="editNotes" rows="5" style="width: 100%; padding: 12px; border: 2px solid #e9ecef; border-radius: 8px; font-size: 16px; line-height: 1.5;" placeholder="Add notes about this highlight..."></textarea>
+                <label for="editCorrection" style="font-size: 18px; font-weight: bold; margin-top: 24px; margin-bottom: 12px; display: block;">Correction:</label>
+                <textarea id="editCorrection" rows="2" style="width: 100%; padding: 12px; border: 2px solid #e9ecef; border-radius: 8px; font-size: 16px; line-height: 1.5;" placeholder="What should this be corrected to?"></textarea>
+
+                <label for="editExplanation" style="font-size: 18px; font-weight: bold; margin-top: 20px; margin-bottom: 12px; display: block;">Explanation:</label>
+                <textarea id="editExplanation" rows="3" style="width: 100%; padding: 12px; border: 2px solid #e9ecef; border-radius: 8px; font-size: 16px; line-height: 1.5;" placeholder="Why is this incorrect? (optional)"></textarea>
 
                 <div style="margin-top: 24px; text-align: right;">
                     <button class="modal-save-btn" style="background: #28a745; color: white; border: none; padding: 14px 24px; border-radius: 6px; cursor: pointer; margin-right: 12px; font-size: 18px; font-weight: 600;">Save</button>
