Fix teacher notes modal loading issue - iteration 3
- Convert modals.js from ES6 module to regular script to fix timing issues
- Remove module import/export syntax and use global dependencies
- Update script tag to load as regular script instead of module
- Fix modal system availability for teacher notes editing
- Should now show proper popup modal instead of browser prompt

--- a/public/index.html
+++ b/public/index.html
@@ -364,7 +364,7 @@
 
     <!-- UI Modules (ES6) -->
     <script src="/js/ui/tab-management.js?v=14"></script>
-    <script type="module" src="/js/ui/modals.js?v=17"></script>
+    <script src="/js/ui/modals.js?v=18"></script>
     <script src="/js/ui/draggable-modal.js?v=1"></script>
     <script src="/js/ui/form-handling.js?v=26"></script>
     <script src="/js/ui/keyboard-shortcuts.js?v=14"></script>
